# type-equalities-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: coerce_array.rs
src/: lib.rs
