[package]
name = "type-equalities"
description = "Observing type equality with zero-sized proofs"
license = "MIT/Apache-2.0"
version = "0.1.2"
authors = ["Martin Molzer <ga65guy@mytum.de>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/WorldSEnder/type-equalities-rs"
repository = "https://github.com/WorldSEnder/type-equalities-rs"

[dependencies]

[features]
default = ["std"]
test-for-type-equality = []
# Reservation for a feature turning off std
std = []
