[package]
name = "type-equalities"
description = "Observing type equality with zero-sized proofs"
license = "MIT/Apache-2.0"
version = "0.2.0"
authors = ["Martin Molzer <ga65guy@mytum.de>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/WorldSEnder/type-equalities-rs"
repository = "https://github.com/WorldSEnder/type-equalities-rs"

[dependencies]
rustversion = "1.0"

[build-dependencies]
rustversion = "1.0"

[features]
default = ["alloc"]
test-for-type-equality = []
alloc = []
